# cpptest

./: .gitignore  3d-cubes.cpp  CMakeLists.txt  cereal-test.cpp  compile_commands.json  entt-test.cpp  functional.cpp  game copy.cpp  game.cpp  ideas.txt  main.cpp  mainold.cpp  shaderprogram.hpp  simulation.cpp  testbench.cpp  time-test.cpp  todo  vcpkg.json
TiledPlugin/: custom_export.js  package-lock.json  package.json
aseprite/: DEFAULT_CHARACTER.aseprite
ecs/: CMakeLists.txt  PhysicsComponents.hpp  PhysicsSystem.cpp
graphics/: AnimationManager.cpp  AnimationManager.hpp  CMakeLists.txt  FontBuilder.cpp  FontBuilder.hpp  FontComponents.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  Graphics.cpp  GraphicsComponents.cpp  GraphicsComponents.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SpriteFactory.hpp  Texture2D.cpp  Texture2D.hpp  TextureManager.cpp  TextureManager.hpp  VertexArrayManager.cpp  VertexArrayManager.hpp  Window.cpp  Window.hpp
lib/: ActionSequencer.cpp  ActionSequencer.hpp  Actor.hpp  AudioComponent.hpp  AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CharacterResources.cpp  Config.cpp  Config.hpp  CreditsState.cpp  CreditsState.hpp  GameObjectComponents.hpp  Injector.cpp  Injector.hpp  KeyEventHandler.cpp  KeyEventHandler.hpp  KeyEventSystem.cpp  KeyEventSystem.hpp  Locator.cpp  Locator.hpp  MouseEventHandler.cpp  MouseEventHandler.hpp  MouseEventHandler2.hpp  MouseEventSystem.cpp  MouseEventSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Registry.hpp  ResourceManager.cpp  ResourceManager.hpp  ScriptEngine.cpp  ScriptEngine.hpp  StartState.cpp  StartState.hpp  State.hpp  TileMap.cpp  TileMap.hpp  (+8 more)
resources/: DEFAULT_ENV.ase  GraphicsSystem.hpp  array-tex.frag  bernie.aseprite  billboard.vert  city-interior-tiles.aseprite  fonts.frag  fonts.vert  mix.frag  mvp.vert  palette_experiment.aseprite  sprite.frag  sprites.vert  tank.aseprite  tank_v2.1.aseprite  tank_v2.aseprite  tex.frag  vert_tex.vert  world.frag  world.vert
scripts/: characters.lua  environment.lua  equipment.lua  map.lua  roster.lua  skill.lua  spritesheet.lua  stats.lua  test.lua  tiles.lua  tileset.lua
scripts/maps/: test.lua
templates/: StartState.cpp  StartState.hpp
tests/: CMakeLists.txt  WorldCacheTest.cpp  test-1.cpp  test-2.cpp
wip-resource/: chibi-template.aseprite  eye-test.aseprite
